Creacion del componente grafica

--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,6 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <app-dona [data]="grafica.data" [labels]="grafica.labels" [title]="grafica.title"></app-dona>
+  </div>
+
+</div>
