--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -29,7 +29,9 @@
                 class="label label-rouded label-themecolor pull-right">4</span></span></a>
           <ul aria-expanded="false" class="collapse">
             <li *ngFor="let menu of item.submenu">
-              <a [routerLink]="menu.url" routerLinkActive="active">{{ menu.title }} </a>
+              <a [routerLink]="menu.url"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact: true}">{{ menu.title }} </a>
             </li>
           </ul>
         </li>
